

#set cp_console executable name
SET(CP_CONSOLE_EXECUTABLE_NAME cp_console)

#set cp_console root directory
SET(CP_CONSOLE_PROJECT_SOURCE_DIR ${CP_APP_CONSOLE_DIR})


#set src directory
SET(CP_CONSOLE_SRC_DIR ${CP_CONSOLE_PROJECT_SOURCE_DIR}/src)
#set include directory
SET(CP_CONSOLE_INCLUDE_DIR ${CP_CONSOLE_PROJECT_SOURCE_DIR}/include)
#set lib directory
SET(CP_CONSOLE_LIBRARY_DIR ${CP_CONSOLE_PROJECT_SOURCE_DIR}/lib)



#get file list
AUX_SOURCE_DIRECTORY(${CP_CONSOLE_SRC_DIR} CP_CONSOLE_EXECUTABLE_FILES_LIST)

#add all subdirectory
ADD_SUBDIRECTORY(${CP_CONSOLE_SRC_DIR})

#MESSAGE(STATUS "CP_CONSOLE_EXECUTABLE_FILES_LIST : "${CP_CONSOLE_EXECUTABLE_FILES_LIST})



SET(SYSTEM_USR_I686_INCLUDE_DIR /usr/lib/i686-redhat-linux6E/include/)
SET(SYSTEM_USR_I686_LIB_DIR /usr/lib/i686-redhat-linux6E/lib/)


#add CONSOLE include direntories
INCLUDE_DIRECTORIES(
		${SYSTEM_USR_I686_INCLUDE_DIR}
    ${CP_CONSOLE_INCLUDE_DIR}
    )


#add CONSOLE library directories 
LINK_DIRECTORIES(
		${SYSTEM_USR_I686_LIB_DIR}
    ${CP_CONSOLE_LIBRARY_DIR}
    )
#MESSAGE(STATUS "CP_CONSOLE_LIBRARY_DIR : "${CP_CONSOLE_LIBRARY_DIR})


#add targe
SET(EXECUTABLE_OUTPUT_PATH ${CP_PROJECT_OUTPUT_TOP_DIR}/${CP_CONSOLE_EXECUTABLE_NAME})

MESSAGE(STATUS " ")
MESSAGE(STATUS " ")
MESSAGE(STATUS "-----------------build project:[ ${CP_CONSOLE_EXECUTABLE_NAME} ]-----------------")
MESSAGE(STATUS "c compiler:[ ${CMAKE_C_COMPILER} ] cxx compiler:[ ${CMAKE_CXX_COMPILER} ]")


MESSAGE(STATUS "project:[ ${CP_CONSOLE_EXECUTABLE_NAME} ] path  : [ ${CP_CONSOLE_PROJECT_SOURCE_DIR} ]")
MESSAGE(STATUS "project:[ ${CP_CONSOLE_EXECUTABLE_NAME} ] output: [ ${EXECUTABLE_OUTPUT_PATH} ]")


SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pie")


ADD_EXECUTABLE(${CP_CONSOLE_EXECUTABLE_NAME} ${CP_CONSOLE_EXECUTABLE_FILES_LIST})
TARGET_LINK_LIBRARIES(${CP_CONSOLE_EXECUTABLE_NAME}
		${CP_PROJECT_LIBRARY_STATIC_NAME}

		libxml2.a
		libuv.a
		libzlog.a
		libiniparser.a
		libgmf_parser.a
		libuuid.a
		
		libz.a
		liblzma.a
		libcharset.a
		libiconv.a
		liblfds710.a
		librt.a
		libm.a
		)
		
MESSAGE(STATUS "executable:[${CP_CONSOLE_EXECUTABLE_NAME}]")



