

#set css_player executable name
SET(CP_CSS_ENCRYPT_EXECUTABLE_NAME css_encrypt)

#set css_player root directory
SET(CP_CSS_ENCRYPT_PROJECT_SOURCE_DIR ${CP_APP_CSS_ENCRYPT_DIR})


#set src directory
SET(CP_CSS_ENCRYPT_SRC_DIR ${CP_CSS_ENCRYPT_PROJECT_SOURCE_DIR}/src)
#set include directory
SET(CP_CSS_ENCRYPT_INCLUDE_DIR ${CP_CSS_ENCRYPT_PROJECT_SOURCE_DIR}/include)
#set lib directory
SET(CP_CSS_ENCRYPT_LIBRARY_DIR ${CP_CSS_ENCRYPT_PROJECT_SOURCE_DIR}/lib)



#get file list
AUX_SOURCE_DIRECTORY(${CP_CSS_ENCRYPT_SRC_DIR} CP_CSS_ENCRYPT_EXECUTABLE_FILES_LIST)

#add all subdirectory
ADD_SUBDIRECTORY(${CP_CSS_ENCRYPT_SRC_DIR})

#MESSAGE(STATUS "CP_CSS_ENCRYPT_EXECUTABLE_FILES_LIST : "${CP_CSS_ENCRYPT_EXECUTABLE_FILES_LIST})

#add player include direntories
INCLUDE_DIRECTORIES(
    ${CP_CSS_ENCRYPT_INCLUDE_DIR}
    )


#add player library directories 
LINK_DIRECTORIES(
    ${CP_CSS_ENCRYPT_LIBRARY_DIR}
    )
#MESSAGE(STATUS "CP_CSS_ENCRYPT_LIBRARY_DIR : "${CP_CSS_ENCRYPT_LIBRARY_DIR})


#add targe
SET(EXECUTABLE_OUTPUT_PATH ${CP_PROJECT_OUTPUT_TOP_DIR}/${CP_CSS_ENCRYPT_EXECUTABLE_NAME})

MESSAGE(STATUS " ")
MESSAGE(STATUS " ")
MESSAGE(STATUS "-----------------build project:[ ${CP_CSS_ENCRYPT_EXECUTABLE_NAME} ]-----------------")
MESSAGE(STATUS "c compiler:[ ${CMAKE_C_COMPILER} ] cxx compiler:[ ${CMAKE_CXX_COMPILER} ]")
MESSAGE(STATUS "project:[ ${CP_CSS_ENCRYPT_EXECUTABLE_NAME} ] path  : [ ${CP_CSS_ENCRYPT_PROJECT_SOURCE_DIR} ]")
MESSAGE(STATUS "project:[ ${CP_CSS_ENCRYPT_EXECUTABLE_NAME} ] output: [ ${EXECUTABLE_OUTPUT_PATH} ]")

ADD_EXECUTABLE(${CP_CSS_ENCRYPT_EXECUTABLE_NAME} ${CP_CSS_ENCRYPT_EXECUTABLE_FILES_LIST})
TARGET_LINK_LIBRARIES(${CP_CSS_ENCRYPT_EXECUTABLE_NAME}
    ${CP_PROJECT_LIBRARY_STATIC_NAME} 
		libxml2.a
		libuv.a
		libzlog.a
		libiniparser.a
		libgmf_parser.a
		libuuid.a
		
		libz.a
		liblzma.a
		libcharset.a
		libiconv.a
		liblfds710.a
		librt.a
		-lm
		)
		
MESSAGE(STATUS "executable:[${CP_CSS_ENCRYPT_EXECUTABLE_NAME}]")



